fix wrap of project container for web responsiveness

--- a/public/styles.css
+++ b/public/styles.css
@@ -128,11 +128,12 @@ body {
   width: 100%;
   justify-content: center;
   gap: 43px;
+  flex-wrap: wrap;
 }
 
 .cards {
   height: 400px;
-  width: 200px;
+  flex-shrink: 1;
 }
 
 .cards .img-holder {
